--- a/sigma.tex
+++ b/sigma.tex
@@ -122,42 +122,34 @@ z \pmod \Lambda & \mapsto (1, \wp_\Lambda(z), \wp_\Lambda'(z)).
 \end{align*}
 This is sometimes referred to as the Weierstrass presentation of $E_\Lambda$.
 
-There is a second standard embedding of a complex elliptic curve into projective space, using \textit{$\theta$--functions}, which are most naturally expressed \emph{multiplicatively}.  To begin, select a lattice $\Lambda$ and a basis for it, and rescale the lattice so that the basis takes the form $\{1, \tau\}$ with $\tau$ in the upper half-plane.  Then, the normalized exponential function $z \mapsto \exp(2 \pi i z)$ has $1 \cdot \Z$ as its kernel, and setting $q = \exp(2 \pi i \tau)$ we get a second presentation of $E_\Lambda$ as $\C^\times / q^{\Z}$.\todo{I think it's helpful to draw a picture here of an annulus with some identification made.}  \todo{I actually don't think we need this alternative $\theta$--function.  The standard $\theta^{1/2,1/2}_q$ will do fine, as it has the same image under $\delta$.}The $\theta$--function we will consider is defined by \[\tilde \theta_q(u) = (1 - u) \prod_{m \ge 1} (1 - q^m u)(1 - q^m u^{-1}).\]  It visibly has roots of order $1$ at all of the points $q^{\Z}$, but since it has no poles it cannot descend to give a function on $\C^\times / q^{\Z}$.  A different obstruction to this descent is its imperfect periodicity relation: \[\tilde \theta_q(qu) = -u^{-1} \tilde\theta_q(u).\]
+There is a second standard embedding of a complex elliptic curve into projective space, using \textit{$\theta$--functions}, which are most naturally expressed \emph{multiplicatively}.  To begin, select a lattice $\Lambda$ and a basis for it, and rescale the lattice so that the basis takes the form $\{1, \tau\}$ with $\tau$ in the upper half-plane.  Then, the normalized exponential function $z \mapsto \exp(2 \pi i z)$ has $1 \cdot \Z$ as its kernel, and setting $q = \exp(2 \pi i \tau)$ we get a second presentation of $E_\Lambda$ as $\C^\times / q^{\Z}$.\todo{I think it's helpful to draw a picture here of an annulus with some identification made.}
 
-Nonetheless, functions of this sort are still useful.  A somewhat more standard $\theta$--function \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Its lone zero is at $\exp(2 \pi i (\frac{1}{2} + \frac{\tau}{2}))$, the center of the fundamental annulus, and it satisfies the functional equation \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u),\] and so is a ``twist'' of $\tilde \theta_q$ considered above.  We can also shift the zero-set of $\theta_q$ by rational rescalings $a$ of $q$ and $b$ of $1$: \[\theta_q^{a,b}(z) = e^{\pi i a^2 \tau + 2 \pi i a (z + b)} \theta_\tau(z + a \tau + b).\]
+The associated $\theta$--function is defined by \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  It vanishes on the set $\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))$, the center of the fundamental annulus.  However, since it has no poles it cannot descend to give a function on $\C^\times / q^{\Z}$.  A different obstruction to this descent is its imperfect periodicity relation: \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]  We can also shift the zero-set of $\theta_q$ by rational rescalings $a$ of $q$ and $b$ of $1$: \[\theta_q^{a,b}(z) = q^{\frac{a^2}{2}} \cdot u^a \cdot \exp(2 \pi i a b) \theta_q(u q^a \exp(2 \pi i b)).\]
 
-\textbf{This needs to be smoothed out.}
+\begin{remark}[{\cite[Proposition 10.2.6]{Husemoller}}]
+For any $N > 0$, define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then, $V_\tau[N]$ has $\C$--dimension $N^2$, and the functions $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$.
+\end{remark}
 
-\begin{lemma}
-For any $N > 0$, define $V_\tau[N]$ to be the space of entire functions $f$ with $f(z + N) = f(z)$ and $f(z + \tau) = e^{-2 \pi i N z - \pi i N^2 \tau} f(z)$.  Then, $V_\tau[N]$ has $\C$--dimension $N^2$, and the functions $\theta_\tau^{a, b}$ give a basis by picking representatives $(a_i, b_i)$ of the classes in $((1/N)\Z / \Z)^2$. \qed
-\end{lemma}
-
-Note that all of these not-quite-periodicity relations will cancel out if we use these functions to form a map to projective space:
+Even though these functions do not themselves descend to $\C^\times / q^{\Z}$, we can collectively use them to construct a map to complex projective space, where the quasi-periodicity relations will mutually cancel in homogeneous coordinates.
+\begin{theorem}[{\cite[Proposition 10.3.2]{Husemoller}}]
+Consider the map
 \begin{align*}
-\C / N(\Z \tau + \Z) & \to \P^{N^2-1}(\C), \\
-z & \mapsto [\cdots : \theta_\tau^{a_i, b_i}(z) : \cdots].
+\C / N(\Lambda) & \xrightarrow{f_{(N)}} \P^{N^2-1}(\C), \\
+z & \mapsto [\cdots : \theta_\tau^{i/N, j/N}(z) : \cdots].
 \end{align*}
-\begin{theorem}
 For $N > 1$, this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-One can work out how it goes for $N = 2$: the four functions there are
+One can work out how it goes for $N = 2$, which will cause some of our pesky $\frac{1}{2}$'s to cancel.  The four functions there are $\theta_q^{0,0}$ with zeroes on $\Lambda + \frac{\tau + 1}{2}$, $\theta_q^{0,1/2}$ with zeroes on $\Lambda + \frac{\tau}{2}$, $\theta_q^{1/2,0}$ with zeroes on $\Lambda + \frac{1}{2}$, and $\theta_q^{1/2,1/2}$ with zeroes on $\Lambda$ exactly.  The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
 \begin{align*}
-\theta_\tau^{0, 0}(z) & = \theta_\tau(z), & \mathrm{zeroes} & = \frac{\tau + 1}{2} + L_\tau, \\
-\theta_\tau^{0, 1/2}(z) & = \theta_\tau(z + 1/2), & \mathrm{zeroes} & = \frac{\tau}{2} + L_\tau, \\
-\theta_\tau^{1/2, 0}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i z} \theta_\tau(z + \tau/2), & \mathrm{zeroes} & = \frac{1}{2} + L_\tau, \\
-\theta_\tau^{1/2, 1/2}(z) & = e^{\frac{1}{4} \pi i \tau + \pi i (z + \frac{1}{4})} \theta_\tau\left(z + \frac{\tau + 1}{2}\right), & \mathrm{zeroes} & = L_\tau.
-\end{align*}
-The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
-\begin{align*}
-A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, \\
+A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, &
 A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
 \end{align*}
 where
 \begin{align*}
 x_0 & = \theta_\tau^{0, 0}(2z), &
-x_1 & = \theta_\tau^{0, 1/2}(2z), \\
+x_1 & = \theta_\tau^{0, 1/2}(2z), &
 x_2 & = \theta_\tau^{1/2, 0}(2z), &
 x_3 & = \theta_\tau^{1/2, 1/2}(2z)
 \end{align*}
@@ -170,28 +162,15 @@ C & = \theta_\tau^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2}
 upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
 \end{example}
 
-\textbf{Pre-smoothing resumes here.}
-
 \begin{remark}
-This embedding of $E_\Lambda$ as an intersection of quadratic hypersurfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_{\exp{2 \pi i \tau}}(\exp{2 \pi i z}) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
+This embedding of $E_\Lambda$ as an intersection of quadratic hypersurfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_{\exp{2 \pi i \tau}}(\exp{2 \pi i z}) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$ and so is ``basically $\theta_q^{1/2,1/2}$''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-The $\theta$--functions version of the story has two main successes.  One is that there is a version of this story for an arbitrary abelian variety.  It turns out that all abelian varieties are projective, and the theorems sitting at the heart of this claim are
-\begin{theorem}[Theorem of the cube]\label{TheoremOfTheCube}\citeme{Milne's Abelian Varieties chapter, Theorem 6.1}\todo{This is stated far more generally than we care.}
-Let $U$, $V$, and $W$ be complete varieties over $k$ with base points $u_0 \in U(k)$, $v_0 \in V(k)$, $w_0 \in W(k)$.  An invertible sheaf $\L$ on $U \times V \times W$ is trivial if its restrictions to $\{u_0\} \times V \times W$, $U \times \{v_0\} \times W$, and $U \times V \times \{w_0\}$ are all trivial. \qed
-\end{theorem}
-
-\begin{corollary}\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4}
+The $\theta$--functions version of the story has two main successes.  One is that there is a version of this story for an arbitrary abelian variety\citeme{Milne's abelian varieties, Theorem 7.1}.  It turns out that all abelian varieties are projective, and the theorems sitting at the heart of this claim are
+\begin{corollary}[Theorem of the cube]\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4 and Theorem 7.1}
 Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized. \qed
 \end{corollary}
-
-\begin{theorem}[Theorem of the square]\label{TheoremOfTheSquare}\citeme{Theorem of the square?}
-For all invertible sheaves $\L$ on an abelian variety $A$ and points $a, b \in A(k)$, \[\L \otimes t_{a+b}^* \L \cong t_a^* \L \otimes t_b^* \L.\]
-\end{theorem}
-\begin{proof}
-Pull back the sheaf in \Cref{Theta3IsTrivial} along the map \[A \xrightarrow{(\id, a, b)} A \times A \times A\] to get the canonically trivialized sheaf \[\frac{t_{a+b}^* \L \otimes \L \otimes a^* \L \otimes b^* \L}{t_a^* \L \otimes (a+b)^* \L \otimes t_b^* \L}.\]  Cancelling the constant factors gives the theorem.
-\end{proof}
-\noindent However, the proof of projectivity arising from this method rests on choosing an ample line bundle on $A$ and using some generating global sections to embed into $\P(\L^{\oplus n})$.  
+\noindent However, the proof of projectivity arising from this method rests on choosing an ample line bundle on $A$ and using some generating global sections to embed into $\P(\L^{\oplus n})$.  A choice of ``$\theta$--structure'' on $A$, which is only slightly more data, gives a canonical identification of $\P(\L^{\oplus n})$ with a \emph{fixed} projective space.
 
 
 
